k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  labels: { app: react-frontend }
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: react-frontend
  type: ClusterIP
